force-app/main/default/objects/custom_create80__c/custom_create80__c.object-meta.xml
<CustomObject>
    <label>Custom created object80</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects80</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>