force-app/main/default/objects/custom_create80__c/fields/custom_create_80field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_80field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 80field503</label>
    <type>Checkbox</type>
</CustomField>